# pyPESTO

./: .codacy.yml  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .rtd_pip_reqs.txt  .travis.yml  .travis_pip_reqs.txt  .travis_requirements.txt  CHANGELOG.rst  CITATION.cff  CONTRIBUTE.rst  CONTRIBUTING.md  INSTALL.rst  LICENSE  README.md  benchmark.py  benchmarkAll.py  import.py  pyproject.toml  pytest.ini  readthedocs.yml  requirements-dev.txt  run_flake8.py  run_flake8.sh  setup.cfg  setup.py  tox.ini  travis_requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: blank.md  bug-report.md  feature-request.md
.github/workflows/: ci.yml  ci_pr.yml  ci_push.yml  clear-cache.yml  deploy.yml  install_deps.sh  publish_dockerhub.yml  test_action.yaml  test_action.yml
doc/: Makefile  README.md  api.rst  api_engine.rst  api_ensemble.rst  api_history.rst  api_logging.rst  api_objective.rst  api_optimize.rst  api_pesto.rst  api_petab.rst  api_predict.rst  api_prediction.rst  api_problem.rst  api_profile.rst  api_pypesto.rst  api_result.rst  api_sample.rst  api_sampling.rst  api_select.rst  api_startpoint.rst  api_storage.rst  api_store.rst  api_visualize.rst  authors.rst  conf.py  contact.rst  containers.rst  contribute.rst  contribute_code.rst  contribute_doc.rst  contribute_tests.rst  deploy.rst  example.rst  examples.rst  how_to_cite.rst  index.rst  install.rst  license.rst  logo.rst  (+7 more)
doc/example/: .gitignore  Amici_workshop_2023.ipynb  Getting started.ipynb  adaptive_metropolis_example.ipynb  amici.ipynb  amici_import.ipynb  bayes_factors.ipynb  benchmark.py  benchmarkCollection.ipynb  boehm_JProteomeRes2014.ipynb  censored.ipynb  censored_data.ipynb  conversion_reaction.ipynb  custom_objective_function.ipynb  data_import.py  dataformat.ipynb  edit_toyexample.py  exampleBatchFile.slurm  example_MPIPool.py  example_censored.ipynb  example_nonlinear_monotone.ipynb  example_ordinal.ipynb  example_qualitative.ipynb  fixed_parameters.ipynb  getting_started.ipynb  gradient_check.ipynb  hdf5_storage.ipynb  hdf5_storage_result.ipynb  hierarchical-Copy1.ipynb  hierarchical.ipynb  history_usage.ipynb  julia.ipynb  metropolis_sampling.ipynb  mixture_models.py  model_evidence_and_bayes_factors.ipynb  model_selection.ipynb  model_with_prior.ipynb  nonlinear_monotone.ipynb  optdesign.ipynb  ordinal.ipynb  (+21 more)
doc/example/Zheng_PNAS2012/tmp/Zheng_PNAS2012/: CMakeLists.txt  JSparse.h  JSparseB.h  Zheng_PNAS2012.h  dwdp.h  dwdx.h  dxdotdp.h  k.h  my.h  p.h  setup.py  sigmay.h  sx.h  sx0.h  v.h  vB.h  w.h  wrapfunctions.h  x.h  xB.h  y.h
doc/example/Zheng_PNAS2012/tmp/Zheng_PNAS2012/Zheng_PNAS2012/: Zheng_PNAS2012.py  __init__.py
doc/example/Zheng_PNAS2012/tmp/Zheng_PNAS2012/swig/: CMakeLists.txt  Zheng_PNAS2012.i
doc/example/conversion_reaction/: CMakeLists.txt  JSparse.h  PEtabJl_module.jl  adjoint.h  conditions.tsv  conversion_reaction.xml  conversion_reaction.yaml  conversion_reaction_2par.xml  create.py  dwdx.h  flux.h  measurements.tsv  model_conversion_reaction.xml  parameter_ensemble.tsv  parameters.tsv  vector.h  wrapfunctions.h
doc/example/conversion_reaction/model_conversion_reaction/: model_conversion_reaction.py
doc/example/conversion_reaction/multiple_conditions/: conditions.tsv  conversion_reaction.yaml  measurements.tsv
doc/example/conversion_reaction/swig/: model_conversion_reaction.i
docker/: Dockerfile  README.md  environment
example/: conversion_reaction.ipynb  model_conversion_reaction.xml  rosen.ipynb  rosenbrock.ipynb
pesto/: __init__.py  objective.py  problem.py  result.py
pesto/engine/: __init__.py
pesto/optimize/: __init__.py  optimize.py  optimizer.py  startpoint.py
pesto/profile/: __init__.py
pesto/sample/: __init__.py
pesto/visualize/: __init__.py
pypesto/: C.py  __init__.py  logging.py  objective.py  problem.py  result.py  util.py  version.py
pypesto/collections/: __init__.py  collections.py  constants.py
pypesto/engine/: __init__.py  base.py  mpi_pool.py  multi_process.py  multi_thread.py  single_core.py  task.py
pypesto/ensemble/: __init__.py  constants.py  covariance_analysis.py  dimension_reduction.py  ensemble.py  task.py  util.py  utils.py
pypesto/examples/: __init__.py  example_class.py  examples.py
pypesto/hierarchical/: __init__.py  base_parameter.py  base_problem.py  base_solver.py  calculator.py  inner_calculator_collector.py  noise.py  optimal_scaling_solver.py  parameter.py  petab.py  problem.py  solver.py  util.py
pypesto/history/: __init__.py  amici.py  base.py  csv.py  generate.py  hdf5.py  memory.py  optimizer.py  options.py  util.py  wandb.py
pypesto/model_selection/: __init__.py  constants.py  method.py  method_stepwise.py  misc.py  model_selection.py  problem.py  row2problem.py  selector.py
pypesto/modelselection/: example_model_selection_definitions.tsv  row2problem.py  unique_models.py
pypesto/objective/: __init__.py  aesara.py  aggregate.py  aggregated.py  amici.py  amici_calculator.py  amici_data_import.py  amici_objective.py  amici_prediction.py  amici_util.py  base.py  constants.py  finite_difference.py  function.py  function_objective.py  history.py  import.py  objective.py  options.py  petab.py  petab_import.py  pre_post_process.py  prior.py  priors.py  scale.py  util.py
test/: __init__.py  _test_sbml_conversion.py  check_git_size.sh  code_coverage.py  conftest.py  coverage.py  petab_util.py  runNotebook.sh  run_notebook.sh  testCoverage.py  test_aggregate.py  test_aggregated.py  test_amici_objective.py  test_engine.py  test_flake8.py  test_hdf5_storage.py  test_hierarchical.py  test_history.py  test_logging.py  test_model_selection.py  test_modelselection.py  test_objective.py  test_optimize.py  test_petab_import.py  test_petab_import_pysb.py  test_petab_suite.py  test_posterior_theano.py  test_prior.py  test_problem.py  test_profile.py  test_qualitative.py  test_sample.py  test_sampling.py  test_sbml_conversion.py  test_startpoint.py  test_storage.py  test_store.py  test_visualize.py  test_x_fixed.py  util.py
test/sample/: util.py  (+2 more)
(+433 files in other folders)
