#######################
# Setup Configuration #
#######################

[metadata]
name = pypesto
version = attr: pypesto.version.__version__
description = python-based Parameter EStimation TOolbox
long_description = file: README.md
long_description_content_type = text/markdown

# URLs
url = https://github.com/icb-dcm/pypesto
download_url = https://github.com/icb-dcm/pypesto/releases
project_urls =
    Bug Tracker = https://github.com/icb-dcm/pypesto/issues
    Documentation = https://pypesto.readthedocs.io
    Changelog = https://pypesto.readthedocs.io/en/latest/changelog.html

# Author information
author = The pyPESTO developers
author_email = yannik.schaelte@gmail.com,jakob.vanhoefer@uni-bonn.de
maintainer = Yannik Schaelte, Jakob Vanhoefer
maintainer_email = yannik.schaelte@gmail.com,jakob.vanhoefer@uni-bonn.de

# License information
license = BSD-3-Clause
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
keywords =
    parameter inference
    optimization
    sampling
    profiles
    ODE
    AMICI
    systems biology

[options]
install_requires =
    numpy >= 1.19.1
    scipy >= 1.5.2
    pandas >= 1.2.0
    cloudpickle >= 1.5.0
    matplotlib >= 3.3.0
    seaborn >= 0.10.0
    h5py >= 3.1.0
    tqdm >= 4.46.0


python_requires = >=3.8
include_package_data = True

# Where is my code
packages = find:

[options.packages.find]
include = pypesto*

[options.extras_require]
all =
    %(amici)s
    %(petab)s
    %(all_optimizers)s
    %(mpi)s
    # %(pymc3)s
    %(aesara)s
    %(emcee)s
    %(mltools)s
    %(doc)s
    %(example)s
    %(select)s
    %(test)s
    %(test_petab)s
all_optimizers =
    %(ipopt)s
    %(dlib)s
    %(nlopt)s
    %(pyswarm)s
    %(cmaes)s
    %(pyswarms)s
    %(fides)s
amici =
    amici >= 0.11.27
petab =
    petab >= 0.1.14
ipopt =
    ipopt
dlib =
    dlib >= 19.19.0
nlopt =
    nlopt >= 2.6.2
pyswarm =
    pyswarm >= 0.6
cmaes =
    cma >= 3.0.3
pyswarms =
    pyswarms >= 1.3.0
fides =
    fides >= 0.6.1
mpi =
    mpi4py >= 3.0.3
# pymc3 =
#     arviz >= 0.8.1, < 0.9.0
#     theano >= 1.0.4
#     packaging >= 20.0
#     pymc3 >= 3.8, < 3.9.2
aesara =
    aesara >= 2.0.5
emcee =
    emcee >= 3.0.2
mltools =
    umap-learn >= 0.5.1
    scikit-learn >= 0.24.1
doc =
    sphinx >= 3.1.0, < 4.0.0
    nbsphinx >= 0.7.0
    nbconvert >= 5.6.1
    sphinx-rtd-theme >= 0.4.3
    sphinx-autodoc-typehints >= 1.11.1
    recommonmark >= 0.6.0
    ipython >= 7.18.1
    %(select)s
    # https://github.com/spatialaudio/nbsphinx/issues/641
    # https://github.com/apache/flink/pull/19238
    Jinja2 == 3.0.3
example =
    notebook >= 6.1.4
select =
    # Remove with next PEtab Select version
    networkx >= 2.5.1
    %(petab)s
    # End remove
    petab-select >= 0.0.8
test =
    pytest >= 5.4.3
    pytest-cov >= 2.10.0
    gitpython >= 3.1.7
    pytest-rerunfailures >= 9.1.1
    autograd >= 1.3
test_petab =
    petabtests >= 0.0.0a6

[bdist_wheel]
# Requires Python 3
universal = False
